--- a/www/css/style.css
+++ b/www/css/style.css
@@ -153,11 +153,6 @@
     color: #fff !important;
 }
 
-#login {
-  height: 100%;
-}
-
-
 .settings .item-divider {
     background-color: #f5f5f5;
 }
